<?xml version="1.0" encoding="utf-8"?><!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Carlos Andres Jimenez <apps@carlosandresjimenez.co>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_account_details_key"
        android:title="@string/pref_account_details_label">

        <EditTextPreference
            android:key="@string/pref_account_email_key"
            android:title="@string/pref_account_email_label"
            android:editable="false" />

        <EditTextPreference
            android:key="@string/pref_account_firstname_key"
            android:title="@string/pref_account_firstname_label" />

        <EditTextPreference
            android:key="@string/pref_account_lastname_key"
            android:title="@string/pref_account_lastname_label" />

        <EditTextPreference
            android:key="@string/pref_account_birthdate_key"
            android:title="@string/pref_account_birthdate_label" />

        <EditTextPreference
            android:key="@string/pref_account_medical_key"
            android:title="@string/pref_account_medical_label" />

        <ListPreference
            android:defaultValue="@string/user_type_patient"
            android:entries="@array/user_types_labels"
            android:entryValues="@array/user_types_values"
            android:key="@string/user_type_key"
            android:title="@string/user_type_label" />

    </PreferenceCategory>
</PreferenceScreen>