<?xml version="1.0" encoding="utf-8"?><!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Carlos Andres Jimenez <apps@carlosandresjimenez.co>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="@string/pref_account_privacy_key"
        android:title="@string/pref_account_privacy_label">

        <!--Share medical number-->
        <CheckBoxPreference
            android:defaultValue="@string/pref_privacy_medical_default"
            android:key="@string/pref_privacy_medical_key"
            android:summaryOff="@string/pref_privacy_off"
            android:summaryOn="@string/pref_privacy_on"
            android:title="@string/pref_privacy_medical_label" />

        <!--Share birthdate-->
        <CheckBoxPreference
            android:defaultValue="@string/pref_privacy_birthdate_default"
            android:key="@string/pref_privacy_birthdate_key"
            android:summaryOff="@string/pref_privacy_off"
            android:summaryOn="@string/pref_privacy_on"
            android:title="@string/pref_privacy_birthdate_label" />

        <!--Share avatar?-->
        <CheckBoxPreference
            android:defaultValue="@string/pref_privacy_avatar_default"
            android:key="@string/pref_privacy_avatar_key"
            android:summaryOff="@string/pref_privacy_off"
            android:summaryOn="@string/pref_privacy_on"
            android:title="@string/pref_privacy_avatar_label" />

        <!--Share location?-->

        <!--Share mobile number?-->

        <!--Share history graph?-->
        <!--<CheckBoxPreference-->
        <!--android:defaultValue="@string/pref_privacy_feedback_default"-->
        <!--android:key="@string/pref_privacy_feedback_key"-->
        <!--android:summaryOff="@string/pref_privacy_off"-->
        <!--android:summaryOn="@string/pref_privacy_on"-->
        <!--android:title="@string/pref_privacy_feedback_label" />-->

    </PreferenceCategory>
</PreferenceScreen>