<?xml version="1.0" encoding="utf-8"?><!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Carlos Andres Jimenez <apps@carlosandresjimenez.co>
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_feed"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/drawer_item_feed" />
        <item
            android:id="@+id/navigation_item_following"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/drawer_item_following" />
        <item
            android:id="@+id/navigation_item_checkin"
            android:icon="@drawable/ic_place_black_24dp"
            android:title="@string/drawer_item_checkin" />
        <item
            android:id="@+id/navigation_item_graph"
            android:icon="@drawable/ic_trending_down_black_24dp"
            android:title="@string/drawer_item_graph" />
    </group>

    <group
        android:id="@+id/subheader"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/drawer_item_settings" />
        <item
            android:id="@+id/navigation_item_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/drawer_item_about" />
    </group>
</menu>